--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/jockerreact.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta name="description" content=" GoIT-React-HW-03-Image-Finder" />
+    <meta name="description" content="GoIT-React-HW-03-Image-Finder" />
 
     <title>Image Finder</title>
   </head>
   <body>
     <div id="root"></div>
+    <div id="modalRoot"></div>
   </body>
 </html>
